edit structure and refactor
