# docs/swagger.yaml
@@ -1,40 +1,5 @@
 basePath: /
 definitions:
-  dto.CreateNotificationRequest:
-    properties:
-      channel:
-        allOf:
-        - $ref: '#/definitions/models.Channel'
-        enum:
-        - email
-        - telegram
-        example: telegram
-      message:
-        example: test_message
-        type: string
-      recipient:
-        description: адрес тг или email
-        example: "796744183"
-        type: string
-      scheduled_at:
-        example: "2025-11-01T10:40:00Z"
-        type: string
-    required:
-    - channel
-    - message
-    - recipient
-    - scheduled_at
-    type: object
-  dto.CreateNotificationResponse:
-    properties:
-      notification_id:
-        type: integer
-    type: object
-  dto.GetNotificationResponse:
-    properties:
-      notification_status:
-        $ref: '#/definitions/models.Status'
-    type: object
   models.Channel:
     enum:
     - telegram
@@ -55,6 +20,33 @@ definitions:
     - StatusSent
     - StatusCancelled
     - StatusFailed
+  request.CreateNotificationRequest:
+    properties:
+      channel:
+        $ref: '#/definitions/models.Channel'
+      message:
+        type: string
+      recipient:
+        description: тг или email
+        type: string
+      scheduled_at:
+        type: string
+    required:
+    - channel
+    - message
+    - recipient
+    - scheduled_at
+    type: object
+  response.CreateNotificationResponse:
+    properties:
+      id:
+        type: integer
+    type: object
+  response.GetNotificationStatusResponse:
+    properties:
+      status:
+        $ref: '#/definitions/models.Status'
+    type: object
 host: localhost:8081
 info:
   contact: {}
@@ -63,103 +55,114 @@ info:
   title: Delayed Notifier
   version: "1.0"
 paths:
-  /notify:
+  /api/v1/notify:
     post:
       consumes:
       - application/json
-      description: create notification with provided params
+      description: Создание нового уведомления
       parameters:
-      - description: notification request
+      - description: Данные для создания уведомления
         in: body
-        name: notification
+        name: req
         required: true
         schema:
-          $ref: '#/definitions/dto.CreateNotificationRequest'
+          $ref: '#/definitions/request.CreateNotificationRequest'
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
-            $ref: '#/definitions/dto.CreateNotificationResponse'
+            $ref: '#/definitions/response.CreateNotificationResponse'
         "400":
-          description: impossible to create notification
+          description: Ошибка валидации
           schema:
             additionalProperties:
               type: string
             type: object
         "500":
-          description: failed to create notification
+          description: Ошибка сервера
           schema:
             additionalProperties:
               type: string
             type: object
-      summary: create notification
+      summary: Создание уведомления
       tags:
-      - notify
-  /notify/{notification_id}:
+      - NOTIFICATIONS API
+  /api/v1/notify/{id}:
     delete:
-      consumes:
-      - application/json
-      description: delete notification by notification_id
+      description: Удаление (отмена) существующего уведомления
       parameters:
-      - description: notification ID
+      - description: ID уведомления
         in: path
-        name: notification_id
+        name: id
         required: true
-        type: string
-      produces:
-      - application/json
+        type: integer
       responses:
         "200":
-          description: delete notification successful
-          schema:
-            type: string
+          description: OK
         "400":
-          description: invalid notification_id
+          description: Ошибка валидации
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Уведомление не существует
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "409":
+          description: Ошибка бизнес логики
           schema:
             additionalProperties:
               type: string
             type: object
         "500":
-          description: failed to delete notification
+          description: Ошибка сервера
           schema:
             additionalProperties:
               type: string
             type: object
-      summary: delete notification
+      security: []
+      summary: Удаление (отмена) уведомления
       tags:
-      - notify
+      - NOTIFICATIONS API
     get:
-      consumes:
-      - application/json
-      description: get notification status by notification_id
+      description: Получение статуса конкретного уведомления
       parameters:
-      - description: notification ID
+      - description: ID уведомления
         in: path
-        name: notification_id
+        name: id
         required: true
-        type: string
+        type: integer
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/dto.GetNotificationResponse'
+            $ref: '#/definitions/response.GetNotificationStatusResponse'
         "400":
-          description: invalid notification_id
+          description: Ошибка валидации
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Уведомление не найдено
           schema:
             additionalProperties:
               type: string
             type: object
         "500":
-          description: failed to get notification status
+          description: Ошибка сервера
           schema:
             additionalProperties:
               type: string
             type: object
-      summary: get notification status
+      summary: Получение статуса уведомления
       tags:
-      - notify
+      - NOTIFICATIONS API
 swagger: "2.0"
